--- a/client/vues/application/Promo2013S2Notes.html
+++ b/client/vues/application/Promo2013S2Notes.html
@@ -145,22 +145,22 @@
 							var moyenneCOM = sumCOM/longueur;
 							var moyenneAI = sumAI/longueur;
 							var moyennePPP = sumPPP/longueur;
-							PromoMGS2.innerHTML += '<tr><td>' + moyenneMGS2 + '</td></tr>'
-							PromoUE21.innerHTML += '<tr><td>' + moyenneUE21 + '</td></tr>'					
-							PromoSE.innerHTML += '<tr><td>' + moyenneSE + '</td></tr>'
-							PromoRX.innerHTML += '<tr><td>' + moyenneRX + '</td></tr>'
-							PromoCOO.innerHTML += '<tr><td>' + moyenneCOO + '</td></tr>'
-							PromoPOO.innerHTML += '<tr><td>' + moyennePOO + '</td></tr>'
-							PromoIHM.innerHTML += '<tr><td>' + moyenneIHM + '</td></tr>'
-							PromoPT.innerHTML += '<tr><td>' + moyennePT + '</td></tr>'
-							PromoEU22.innerHTML += '<tr><td>' + moyenneEU22 + '</td></tr>'							
-							PromoGL.innerHTML += '<tr><td>' + moyenneGL + '</td></tr>'
-							PromoAN.innerHTML += '<tr><td>' + moyenneAN + '</td></tr>'
-							PromoECFJS.innerHTML += '<tr><td>' + moyenneECFJS + '</td></tr>'
-							PromoGPI.innerHTML += '<tr><td>' + moyenneGPI + '</td></tr>'
-							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM + '</td></tr>'
-							PromoAI.innerHTML += '<tr><td>' + moyenneAI + '</td></tr>'
-							PromoPPP.innerHTML += '<tr><td>' + moyennePPP + '</td></tr>'
+							PromoMGS2.innerHTML += '<tr><td>' + moyenneMGS2.toFixed(2); + '</td></tr>'
+							PromoUE21.innerHTML += '<tr><td>' + moyenneUE21.toFixed(2); + '</td></tr>'					
+							PromoSE.innerHTML += '<tr><td>' + moyenneSE.toFixed(2); + '</td></tr>'
+							PromoRX.innerHTML += '<tr><td>' + moyenneRX.toFixed(2); + '</td></tr>'
+							PromoCOO.innerHTML += '<tr><td>' + moyenneCOO.toFixed(2); + '</td></tr>'
+							PromoPOO.innerHTML += '<tr><td>' + moyennePOO.toFixed(2); + '</td></tr>'
+							PromoIHM.innerHTML += '<tr><td>' + moyenneIHM.toFixed(2); + '</td></tr>'
+							PromoPT.innerHTML += '<tr><td>' + moyennePT.toFixed(2); + '</td></tr>'
+							PromoEU22.innerHTML += '<tr><td>' + moyenneEU22.toFixed(2); + '</td></tr>'							
+							PromoGL.innerHTML += '<tr><td>' + moyenneGL.toFixed(2); + '</td></tr>'
+							PromoAN.innerHTML += '<tr><td>' + moyenneAN.toFixed(2); + '</td></tr>'
+							PromoECFJS.innerHTML += '<tr><td>' + moyenneECFJS.toFixed(2); + '</td></tr>'
+							PromoGPI.innerHTML += '<tr><td>' + moyenneGPI.toFixed(2); + '</td></tr>'
+							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM.toFixed(2); + '</td></tr>'
+							PromoAI.innerHTML += '<tr><td>' + moyenneAI.toFixed(2); + '</td></tr>'
+							PromoPPP.innerHTML += '<tr><td>' + moyennePPP.toFixed(2); + '</td></tr>'
 						</script>
 						<table class="table" id="table">
 							<thead>
