--- a/client/vues/application/Promo2013S3Notes.html
+++ b/client/vues/application/Promo2013S3Notes.html
@@ -143,21 +143,21 @@
 							var moyenneGSI = sumGSI/longueur;
 							var moyenneCOM = sumCOM/longueur;
 							var moyenneAI = sumAI/longueur;
-							PromoMGS3.innerHTML += '<tr><td>' + moyenneMGS3 + '</td></tr>'
-							PromoUE31.innerHTML += '<tr><td>' + moyenneUE31 + '</td></tr>'					
-							PromoSE.innerHTML += '<tr><td>' + moyenneSE + '</td></tr>'
-							PromoRX.innerHTML += '<tr><td>' + moyenneRX + '</td></tr>'
-							PromoAPA.innerHTML += '<tr><td>' + moyenneAPA + '</td></tr>'
-							PromoPWEB.innerHTML += '<tr><td>' + moyennePWEB + '</td></tr>'
-							PromoCPA.innerHTML += '<tr><td>' + moyenneCPA + '</td></tr>'
-							PromoBDA.innerHTML += '<tr><td>' + moyenneBDA + '</td></tr>'
-							PromoEU32.innerHTML += '<tr><td>' + moyenneEU32 + '</td></tr>'							
-							PromoPROBA.innerHTML += '<tr><td>' + moyennePROBA + '</td></tr>'
-							PromoMODMATH.innerHTML += '<tr><td>' + moyenneMODMATH + '</td></tr>'
-							PromoDROIT.innerHTML += '<tr><td>' + moyenneDROIT + '</td></tr>'
-							PromoGSI.innerHTML += '<tr><td>' + moyenneGSI + '</td></tr>'
-							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM + '</td></tr>'
-							PromoAI.innerHTML += '<tr><td>' + moyenneAI + '</td></tr>'
+							PromoMGS3.innerHTML += '<tr><td>' + moyenneMGS3.toFixed(2); + '</td></tr>'
+							PromoUE31.innerHTML += '<tr><td>' + moyenneUE31.toFixed(2); + '</td></tr>'					
+							PromoSE.innerHTML += '<tr><td>' + moyenneSE.toFixed(2); + '</td></tr>'
+							PromoRX.innerHTML += '<tr><td>' + moyenneRX.toFixed(2); + '</td></tr>'
+							PromoAPA.innerHTML += '<tr><td>' + moyenneAPA.toFixed(2); + '</td></tr>'
+							PromoPWEB.innerHTML += '<tr><td>' + moyennePWEB.toFixed(2); + '</td></tr>'
+							PromoCPA.innerHTML += '<tr><td>' + moyenneCPA.toFixed(2); + '</td></tr>'
+							PromoBDA.innerHTML += '<tr><td>' + moyenneBDA.toFixed(2); + '</td></tr>'
+							PromoEU32.innerHTML += '<tr><td>' + moyenneEU32.toFixed(2); + '</td></tr>'							
+							PromoPROBA.innerHTML += '<tr><td>' + moyennePROBA.toFixed(2); + '</td></tr>'
+							PromoMODMATH.innerHTML += '<tr><td>' + moyenneMODMATH.toFixed(2); + '</td></tr>'
+							PromoDROIT.innerHTML += '<tr><td>' + moyenneDROIT.toFixed(2); + '</td></tr>'
+							PromoGSI.innerHTML += '<tr><td>' + moyenneGSI.toFixed(2); + '</td></tr>'
+							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM.toFixed(2); + '</td></tr>'
+							PromoAI.innerHTML += '<tr><td>' + moyenneAI.toFixed(2); + '</td></tr>'
 						</script>
 						<table class="table" id="table">
 							<thead>
