--- a/client/vues/application/Promo2013S4Notes.html
+++ b/client/vues/application/Promo2013S4Notes.html
@@ -127,19 +127,19 @@
 							var moyenneRO = sumRO/longueur;
 							var moyenneCOM = sumCOM/longueur;
 							var moyenneAI = sumAI/longueur;
-							PromoMGS4.innerHTML += '<tr><td>' + moyenneMGS4 + '</td></tr>'
-							PromoUE41.innerHTML += '<tr><td>' + moyenneUE41 + '</td></tr>'					
-							PromoADMSR.innerHTML += '<tr><td>' + moyenneADMSR + '</td></tr>'
-							PromoPROGREP.innerHTML += '<tr><td>' + moyennePROGREP + '</td></tr>'
-							PromoPWEB.innerHTML += '<tr><td>' + moyennePWEB + '</td></tr>'
-							PromoPROGMOB.innerHTML += '<tr><td>' + moyennePROGMOB + '</td></tr>'
-							PromoCOMPINFO.innerHTML += '<tr><td>' + moyenneCOMPINFO + '</td></tr>'
-							PromoPT.innerHTML += '<tr><td>' + moyennePT + '</td></tr>'
-							PromoEU42.innerHTML += '<tr><td>' + moyenneEU42 + '</td></tr>'							
-							PromoAT.innerHTML += '<tr><td>' + moyenneAT + '</td></tr>'
-							PromoRO.innerHTML += '<tr><td>' + moyenneRO + '</td></tr>'
-							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM + '</td></tr>'
-							PromoAI.innerHTML += '<tr><td>' + moyenneAI + '</td></tr>'
+							PromoMGS4.innerHTML += '<tr><td>' + moyenneMGS4.toFixed(2); + '</td></tr>'
+							PromoUE41.innerHTML += '<tr><td>' + moyenneUE41.toFixed(2); + '</td></tr>'					
+							PromoADMSR.innerHTML += '<tr><td>' + moyenneADMSR.toFixed(2); + '</td></tr>'
+							PromoPROGREP.innerHTML += '<tr><td>' + moyennePROGREP.toFixed(2); + '</td></tr>'
+							PromoPWEB.innerHTML += '<tr><td>' + moyennePWEB.toFixed(2); + '</td></tr>'
+							PromoPROGMOB.innerHTML += '<tr><td>' + moyennePROGMOB.toFixed(2); + '</td></tr>'
+							PromoCOMPINFO.innerHTML += '<tr><td>' + moyenneCOMPINFO.toFixed(2); + '</td></tr>'
+							PromoPT.innerHTML += '<tr><td>' + moyennePT.toFixed(2); + '</td></tr>'
+							PromoEU42.innerHTML += '<tr><td>' + moyenneEU42.toFixed(2); + '</td></tr>'							
+							PromoAT.innerHTML += '<tr><td>' + moyenneAT.toFixed(2); + '</td></tr>'
+							PromoRO.innerHTML += '<tr><td>' + moyenneRO.toFixed(2); + '</td></tr>'
+							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM.toFixed(2); + '</td></tr>'
+							PromoAI.innerHTML += '<tr><td>' + moyenneAI.toFixed(2); + '</td></tr>'
 						</script>
 						<table class="table" id="table">
 							<thead>
