--- a/client/vues/application/semestre1.html
+++ b/client/vues/application/semestre1.html
@@ -12,17 +12,16 @@
 								<button class="btn btn-default btn-xs btn-filter">Filtre</button>
 							</div>
 						</div>
-						<script type="text/javascript" src="/js/jquery-latest.js"></script> 
-						<script type="text/javascript" src="/js/jquery.tablesorter.js"></script> 
-						<script>
-							/* Trier chaque colonne du tableau */
-							$(document).ready(function() 
-								{ 
-									$("#table").tablesorter(); 
-								} 
-							); 
+						<script type="text/javascript" src="/jquery-latest.js"></script> 
+						<script type="text/javascript" src="/jquery.tablesorter.js"></script> 
+
+						<script type="text/javascript">
+							$(function() {
+								$("table").tablesorter({debug: true});
+							});
 						</script>
-						<table class="table" id="table">
+	
+					<table id="table" class="table"> 
 							<thead>
 								<tr class="filters">
 									<th><input type="text" class="form-control" placeholder="Nom" disabled></th>
@@ -69,7 +68,7 @@
 									{{/each}}
 									<td name="absences">{{ absences }} abs.</td>
 									<td name="redoublant">{{ redoublant }}</td>
-									<td><a class="btn btn-danger delete" href="#">Suppr</a> <a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
+									<td><a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
 								</tr>
 								{{/each}}
 							</tbody>
