--- a/client/vues/application/Promo2013S1.html
+++ b/client/vues/application/Promo2013S1.html
@@ -137,9 +137,9 @@
 			var moyenneGen = sumGen/longueur;
 			var moyenneUE = sumUE/longueur;
 			var moyenneEU = sumEU/longueur;
-			PromoGen.innerHTML += '<tr><td>' + moyenneGen + '</td></tr>'
-			PromoUE.innerHTML += '<tr><td>' + moyenneUE + '</td></tr>'
-			PromoEU.innerHTML += '<tr><td>' + moyenneEU + '</td></tr>'
+			PromoGen.innerHTML += '<tr><td>' + moyenneGen.toFixed(2); + '</td></tr>'
+			PromoUE.innerHTML += '<tr><td>' + moyenneUE.toFixed(2); + '</td></tr>'
+			PromoEU.innerHTML += '<tr><td>' + moyenneEU.toFixed(2); + '</td></tr>'
 		</script>
 
 		<script>
