--- a/client/vues/application/Promo2014S3.html
+++ b/client/vues/application/Promo2014S3.html
@@ -129,9 +129,9 @@
 		moyenneGen = sumGen/longueur;
 		moyenneUE = sumUE/longueur;
 		moyenneEU = sumEU/longueur;
-		PromoGen.innerHTML += '<tr><td>' + moyenneGen + '</td></tr>'
-		PromoUE.innerHTML += '<tr><td>' + moyenneUE + '</td></tr>'
-		PromoEU.innerHTML += '<tr><td>' + moyenneEU + '</td></tr>'
+		PromoGen.innerHTML += '<tr><td>' + moyenneGen.toFixed(2); + '</td></tr>'
+		PromoUE.innerHTML += '<tr><td>' + moyenneUE.toFixed(2); + '</td></tr>'
+		PromoEU.innerHTML += '<tr><td>' + moyenneEU.toFixed(2); + '</td></tr>'
 		</script>
 
 		<script>
