--- a/client/vues/application/Promo2015S1Notes.html
+++ b/client/vues/application/Promo2015S1Notes.html
@@ -139,21 +139,21 @@
 							var moyenneCOM = sumCOM/longueur;
 							var moyenneAI = sumAI/longueur;
 							var moyennePPP = sumPPP/longueur;
-							PromoMGS1.innerHTML += '<tr><td>' + moyenneMGS1 + '</td></tr>'
-							PromoUE11.innerHTML += '<tr><td>' + moyenneUE11 + '</td></tr>'
-							PromoSE.innerHTML += '<tr><td>' + moyenneSE + '</td></tr>'
-							PromoAP.innerHTML += '<tr><td>' + moyenneAP + '</td></tr>'
-							PromoBD.innerHTML += '<tr><td>' + moyenneBD + '</td></tr>'
-							PromoCDIN.innerHTML += '<tr><td>' + moyenneCDIN + '</td></tr>'
-							PromoPT.innerHTML += '<tr><td>' + moyennePT + '</td></tr>'
-							PromoEU12.innerHTML += '<tr><td>' + moyenneEU12 + '</td></tr>'							
-							PromoMD.innerHTML += '<tr><td>' + moyenneMD + '</td></tr>'
-							PromoAL.innerHTML += '<tr><td>' + moyenneAL + '</td></tr>'
-							PromoEE.innerHTML += '<tr><td>' + moyenneEE + '</td></tr>'
-							PromoORGA.innerHTML += '<tr><td>' + moyenneORGA + '</td></tr>'
-							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM + '</td></tr>'
-							PromoAI.innerHTML += '<tr><td>' + moyenneAI + '</td></tr>'
-							PromoPPP.innerHTML += '<tr><td>' + moyennePPP + '</td></tr>'
+							PromoMGS1.innerHTML += '<tr><td>' + moyenneMGS1.toFixed(2); + '</td></tr>'
+							PromoUE11.innerHTML += '<tr><td>' + moyenneUE11.toFixed(2); + '</td></tr>'
+							PromoSE.innerHTML += '<tr><td>' + moyenneSE.toFixed(2); + '</td></tr>'
+							PromoAP.innerHTML += '<tr><td>' + moyenneAP.toFixed(2); + '</td></tr>'
+							PromoBD.innerHTML += '<tr><td>' + moyenneBD.toFixed(2); + '</td></tr>'
+							PromoCDIN.innerHTML += '<tr><td>' + moyenneCDIN.toFixed(2); + '</td></tr>'
+							PromoPT.innerHTML += '<tr><td>' + moyennePT.toFixed(2); + '</td></tr>'
+							PromoEU12.innerHTML += '<tr><td>' + moyenneEU12.toFixed(2); + '</td></tr>'							
+							PromoMD.innerHTML += '<tr><td>' + moyenneMD.toFixed(2); + '</td></tr>'
+							PromoAL.innerHTML += '<tr><td>' + moyenneAL.toFixed(2); + '</td></tr>'
+							PromoEE.innerHTML += '<tr><td>' + moyenneEE.toFixed(2); + '</td></tr>'
+							PromoORGA.innerHTML += '<tr><td>' + moyenneORGA.toFixed(2); + '</td></tr>'
+							PromoCOM.innerHTML += '<tr><td>' + moyenneCOM.toFixed(2); + '</td></tr>'
+							PromoAI.innerHTML += '<tr><td>' + moyenneAI.toFixed(2); + '</td></tr>'
+							PromoPPP.innerHTML += '<tr><td>' + moyennePPP.toFixed(2); + '</td></tr>'
 						</script>
 						<table class="table" id="table">
 							<thead>
