--- a/client/vues/application/carnetEtu.html
+++ b/client/vues/application/carnetEtu.html
@@ -35,6 +35,14 @@
 								<button class="btn btn-default btn-xs btn-filter">Filtre</button>
 							</div>
 						</div>
+						<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+						<script>
+						$(document).ready(function(){
+							$("button").click(function(){
+								$("test").toggle();
+							});
+						});
+						</script>
 						<script>
 							function colorTest(){
 								var tds = document.getElementById('table').getElementsByTagName('td');
@@ -96,7 +104,7 @@
 											
 										{{/each}}
 									</td>	
-								{{/each}}
+								{{/each}}		
 							</tbody>
 						</table>
 					</div>	
