--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -2,7 +2,6 @@
     <head>
 		<title>Gestion des etudiants</title>
 	</head>
-	<script type="text/javascript" src="/js/jquery-latest.js"></script> 
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
@@ -19,14 +18,17 @@
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
 					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
-					<li><a href="{{pathFor route='Promo2013S1'}}">S1Promo13</a></li>
-					<li><a href="{{pathFor route='Promo2013S2'}}">S2Promo13</a></li>
-					<li><a href="{{pathFor route='Promo2013S3'}}">S3Promo13</a></li>
-					<li><a href="{{pathFor route='Promo2013S4'}}">S4Promo13</a></li>
-					<li><a href="{{pathFor route='Promo2014S1'}}">S1Promo14</a></li>
-					<li><a href="{{pathFor route='Promo2014S2'}}">S2Promo14</a></li>
-					<li><a href="{{pathFor route='Promo2014S3'}}">S3Promo14</a></li>
-					<li><a href="{{pathFor route='Promo2015S1'}}">S1Promo15</a></li>
+					<li><a>Promo 2013 ></a></li>
+					<li><a href="{{pathFor route='Promo2013S1'}}">S1</a></li>
+					<li><a href="{{pathFor route='Promo2013S2'}}">S2</a></li>
+					<li><a href="{{pathFor route='Promo2013S3'}}">S3</a></li>
+					<li><a href="{{pathFor route='Promo2013S4'}}">S4</a></li>
+					<li><a>Promo 2014 ></a></li>
+					<li><a href="{{pathFor route='Promo2014S1'}}">S1</a></li>
+					<li><a href="{{pathFor route='Promo2014S2'}}">S2</a></li>
+					<li><a href="{{pathFor route='Promo2014S3'}}">S3</a></li>
+					<li><a>Promo 2015 ></a></li>
+					<li><a href="{{pathFor route='Promo2015S1'}}">S1</a></li>
 				</ul>	
 				<!--	
 					</li>
