Refonte partiel de la BDD et ajout du système de promotion

--- a/client/vues/application/inscription.html
+++ b/client/vues/application/inscription.html
@@ -5,8 +5,8 @@
             <div class="row">
                 <div class="form-group">
                     <label for="comment">Contenu Excel pour inscription:</label>
-                    <i>au format<br/> Nom Prénom Groupe Mail Adresse CP Ville Semestre</i>
-                    <textarea class="form-control" rows="10" cols="250" id="textarea" placeholder="Dupont   Marc    2C  marc.dup@iut.fr 1 rue de l'université   62300   Lens    S1"></textarea>
+                    <i>au format<br/> Nom Prénom Groupe Promotion Mail Adresse CP Ville Semestre</i>
+                    <textarea class="form-control" rows="10" cols="250" id="textarea" placeholder="Dupont   Marc    2C  Promotion marc.dup@iut.fr 1 rue de l'université   62300   Lens    S1"></textarea>
                 </div>
                 <input class="add" type="submit" value="Valider"  />
             </div>
