--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -18,8 +18,8 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
-					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
 					<li><a href="{{pathFor route='inscription'}}">Inscription</a></li>
+					<li><a href="{{pathFor route='promotion'}}">Promotion</a></li>
 					<li><a href="{{pathFor route='note'}}">Note</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
