--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -90,6 +90,20 @@
 							</select>
 						</div>
 					</div>
+
+					<!-- promotion -->
+					<div class="control-group">
+						<label class="control-label">Promotion</label>
+						<div class="controls">
+							<select id="promotion" name="promotion" class="input-xlarge">
+								<option value="" selected="selected">(choisissez une promotion)</option>
+								{{#each promo}}
+								<option value = {{nom}}>{{promotion}}</option>
+								{{/each}}
+							</select>
+							<p class="help-block"></p>
+						</div>
+					</div>
                 
 				
 					<!-- mail-->
