--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -33,7 +33,7 @@
 									<td name="adresse">{{ adresse }}</td>
 									<td name="cp">{{ cp }}</td>
 									<td name="ville">{{ ville }}</td> 							
-									<td><a class="btn btn-danger delete" href="#">Suppr</a> <a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
+									<td><a class="btn btn-danger delete" href="#">Suppr</a> <a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a><a class="btn btn-info" href="/etudiant/ajouterNote/{{_id}}">ajouterNote</a></td>
 								</tr>
 								{{/each}}
 							</tbody>
@@ -129,6 +129,19 @@
 							<input id="cp" name="cp" type="text" placeholder="cp"
 							class="input-xlarge">
 							<p class="help-block"></p>
+						</div>
+					</div>
+					
+					<!-- inscription -->
+					<div class="control-group">
+						<label class="control-label">Inscrire l'étudiant à un semestre</label>
+						<div class="controls">
+							<select id="semestre" name="semestre" class="input-xlarge">
+								<option value="" selected="selected">(choisissez un semestre)</option>
+								{{#each semestre}}
+									<option value = {{nom}}>{{nom}}</option>
+								{{/each}}
+							</select>
 						</div>
 					</div>
 					
