--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -2,6 +2,7 @@
     <head>
 		<title>Gestion des etudiants</title>
 	</head>
+
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
@@ -17,43 +18,13 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
-					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
-					<li><div class="dropdown">
-					  <button type="button" data-toggle="dropdown">Promo 2013
-					  <span class="caret"></span></button>
-					  <ul class="dropdown-menu">
-						<li><a href="{{pathFor route='Promo2013S1'}}">S1</a></li>
-						<li><a href="{{pathFor route='Promo2013S2'}}">S2</a></li>
-						<li><a href="{{pathFor route='Promo2013S3'}}">S3</a></li>
-						<li><a href="{{pathFor route='Promo2013S4'}}">S4</a></li>
-					  </ul>
-					</div></li>
-					<li>
-					<div class="dropdown">
-					  <button type="button" data-toggle="dropdown">Promo 2014
-					  <span class="caret"></span></button>
-					  <ul class="dropdown-menu">
-						<li><a href="{{pathFor route='Promo2013S1'}}">S1</a></li>
-						<li><a href="{{pathFor route='Promo2013S2'}}">S2</a></li>
-						<li><a href="{{pathFor route='Promo2013S3'}}">S3</a></li>
-					  </ul>
-					</div></li>
-					<li>
-					<div class="dropdown">
-					  <button type="button" data-toggle="dropdown">Promo 2015
-					  <span class="caret"></span></button>
-					  <ul class="dropdown-menu">
-						<li><a href="{{pathFor route='Promo2013S1'}}">S1</a></li>
-					  </ul>
-					</div></li>
-				</ul>	
-				<!--	
-					</li>
+					<li><a href="{{pathFor route='inscription'}}">Inscription</a></li>
+					<li><a href="{{pathFor route='promotion'}}">Promotion</a></li>
+					<li><a href="{{pathFor route='note'}}">Note</a></li>
 				</ul>
-				
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="{{pathFor route='semestre'}}">Semestre</a></li>
-				</ul>-->
+				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
