--- a/client/vues/application/semestre1.html
+++ b/client/vues/application/semestre1.html
@@ -8,6 +8,7 @@
 							
 							<h3 class="panel-title">Semestre 1</h3><a class="btn btn-info" onClick="colorTest();">color</a>
 							<a class="btn btn-info" href="/detailNotes1">Detail Notes</a>
+							<a class="btn btn-info" onClick="classement();">Classement</a>
 							<div class="pull-right">
 								<button class="btn btn-default btn-xs btn-filter">Filtre</button>
 							</div>
@@ -17,7 +18,15 @@
 
 						<script type="text/javascript">
 							$(function() {
-								$("table").tablesorter({debug: true});
+								/* Trier le tableau */
+								$("table").tablesorter({
+									sortInitialOrder: 'desc',
+								});
+								
+								/* Selectionner ligne du tableau */
+								$("tr").click(function(){
+									$(this).addClass("selected").siblings().removeClass("selected");
+								});
 							});
 						</script>
 	
@@ -31,7 +40,8 @@
 									<th><input type="text" class="form-control" placeholder="EU12" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Absences" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Redoublant" disabled></th>
-									<th>Actions</th>
+									<th><input type="text" class="form-control" placeholder="Classement" disabled></th>
+							<!-- 	<th>Actions</th> -->
 								</tr>
 							</thead>
 							<tbody>
@@ -66,9 +76,10 @@
 									{{#each eu}}
 									<td class="eu12">{{ eu12 }}</td>
 									{{/each}}
-									<td name="absences">{{ absences }} abs.</td>
+									<td class="absences">{{ absences }}</td>
 									<td name="redoublant">{{ redoublant }}</td>
-									<td><a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
+									<td class="classement"></td>
+							<!--	<td><a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>-->
 								</tr>
 								{{/each}}
 							</tbody>
@@ -90,17 +101,19 @@
 			function colorTest(){
 				var tds = document.getElementById('table').getElementsByTagName('td');
 				for(var k = 0; k < tds.length; k ++) {
-					if(tds[k].innerHTML>9)
-					{ 
-						tds[k].style.backgroundColor='#9bdb10';
-					}
-					else if(tds[k].innerHTML<10 && tds[k].innerHTML>7)
-					{
-						tds[k].style.backgroundColor='#ff953d';
-					}
-					else if(tds[k].innerHTML<8 && tds[k].innerHTML>0)
-					{
-						tds[k].style.backgroundColor='#ff1b1b';
+				if(tds[k].className != 'absences' && tds[k].className != 'classement'){
+						if(tds[k].innerHTML>9)
+						{ 
+							tds[k].style.backgroundColor='#9bdb10';
+						}
+						else if(tds[k].innerHTML<10 && tds[k].innerHTML>7)
+						{
+							tds[k].style.backgroundColor='#ff953d';
+						}
+						else if(tds[k].innerHTML<8 && tds[k].innerHTML>0)
+						{
+							tds[k].style.backgroundColor='#ff1b1b';
+						}
 					}
 				}
 			}
@@ -137,6 +150,14 @@
 			PromoGen.innerHTML += '<tr><td>' + moyenneGen + '</td></tr>'
 			PromoUE.innerHTML += '<tr><td>' + moyenneUE + '</td></tr>'
 			PromoEU.innerHTML += '<tr><td>' + moyenneEU + '</td></tr>'
+			
+			/* Classement */	
+				function classement(){
+					var items = document.getElementsByClassName("classement"),i, len;
+					for (i = 0, len = items.length; i < len; i++) {
+						items[i].innerHTML = i+1;
+					}
+				}
 		</script>
 
 		<script>
