--- a/client/vues/application/semestre4.html
+++ b/client/vues/application/semestre4.html
@@ -7,6 +7,7 @@
 						<div class="panel-heading">
 							<h3 class="panel-title">Semestre 4</h3><a class="btn btn-info" onClick="colorTest();">color</a>
 							<a class="btn btn-info" href="/detailNotes4">Detail Notes</a>
+							<a class="btn btn-info" onClick="classement();">Classement</a>					
 							<div class="pull-right">
 								<button class="btn btn-default btn-xs btn-filter">Filtre</button>
 							</div>
@@ -28,7 +29,7 @@
 									<th><input type="text" class="form-control" placeholder="EU42" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Absences" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Redoublant" disabled></th>
-					<!--			<th><input type="text" class="form-control" placeholder="Classement" disabled></th> -->
+									<th><input type="text" class="form-control" placeholder="Classement" disabled></th>
 								</tr>
 							</thead>
 							<tbody>
@@ -47,9 +48,9 @@
 									<td class="eu32">{{ eu32 }}</td>
 									<td class="eu42">{{ eu42 }}</td>
 									{{/each}}
-									<td name="absences">{{ absences }} abs.</td>
+									<td class="absences">{{ absences }}</td>
 									<td name="redoublant">{{ redoublant }}</td>
-					<!--			<td name="classement">{{ classement }}</td>  -->
+									<td class="classement"></td>
 								</tr>
 								{{/each}}
 							</tbody>
@@ -71,31 +72,37 @@
 			</div>	
 		</div>
 		<script>
-		$(document).ready(function() 
-			{ 
-				$("#table").DataTable(); 
-			} 
-		); 
+		$("table").tablesorter({
+			sortInitialOrder: 'desc',
+		});
 		
+		/* Selectionner ligne du tableau */
+		$("tr").click(function(){
+			$(this).addClass("selected").siblings().removeClass("selected");
+		});
+		
+		/* Couleurs en fonction de la moyenne */
 		function colorTest(){
 			var tds = document.getElementById('table').getElementsByTagName('td');
 			for(var k = 0; k < tds.length; k ++) {
-				if(tds[k].innerHTML>9)
-				{ 
-					tds[k].style.backgroundColor='#9bdb10';
-				}
-				else if(tds[k].innerHTML<10 && tds[k].innerHTML>7)
-				{
-					tds[k].style.backgroundColor='#ff953d';
-				}
-				else if(tds[k].innerHTML<8 && tds[k].innerHTML>0)
-				{
-					tds[k].style.backgroundColor='#ff1b1b';
+				if(tds[k].className != 'absences' && tds[k].className != 'classement'){
+					if(tds[k].innerHTML>9)
+					{ 
+						tds[k].style.backgroundColor='#9bdb10';
+					}
+					else if(tds[k].innerHTML<10 && tds[k].innerHTML>7)
+					{
+						tds[k].style.backgroundColor='#ff953d';
+					}
+					else if(tds[k].innerHTML<8 && tds[k].innerHTML>0)
+					{
+						tds[k].style.backgroundColor='#ff1b1b';
+					}
 				}
 			}
 		}
 		
-			/* Moyenne Promo */
+		/* Moyenne Promo */
 		var tds = document.getElementById('table').getElementsByTagName('td');
 		var trs = document.getElementById('table').getElementsByTagName('tr');
 		var sumINFO2=0;
@@ -153,6 +160,16 @@
 		PromoEU32.innerHTML += '<tr><td>' + moyenneEU32 + '</td></tr>'
 		PromoUE41.innerHTML += '<tr><td>' + moyenneUE41 + '</td></tr>'
 		PromoEU42.innerHTML += '<tr><td>' + moyenneEU42 + '</td></tr>'
+		
+		/* Classement */		
+		function classement(){
+			var etudiantCourant = this._id;
+			var items = document.getElementsByClassName("classement"),i, len;
+
+			for (i = 0, len = items.length; i < len; i++) {
+				items[i].innerHTML = i+1;
+			}
+		}
 		</script>
 		<script>
 			$(document).ready(function(){
